# datakeeper

./: .gitignore  README.md  config.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ais_live_router/: ais_processor.py  configuration.py  kafka_manager.py  logger.py  map_server.py  mongo_manager.py  utils.py
ais_live_router/database/: docker-compose.yml  mongo-init.js
ais_live_router/webserver/: data_ingestion.py  main.py  requests.py
ais_live_router/webserver/static/: base.css  output.css
ais_live_router/webserver/templates/: base.html  index.html
datakeeper/: api_server.py  data_generator.py  file_creator.py  job_scheduler.py  main.py  policy_manager.py  policy_store.py  settings.py
datakeeper/api/: package-lock.json
datakeeper/api/app/: db.py  main.py  models.py  requests.py  sse_manager.py
datakeeper/api/app/static/: index.css
datakeeper/api/app/templates/: base.html  index.html
datakeeper/config/: policy.yaml
datakeeper/database/: db.py  init.sql
datakeeper/file_types/: file_type_handler.py
datakeeper/mixins/: logger.py
datakeeper/policy_system/: plugin_registry.py
datakeeper/policy_system/plugins/: data_downsampling_operation.py  data_reduction_operation.py  default_strategy.py  downsampler_policy.py  retention_policy.py
deployment/: Dockerfile.build  README.md  docker-compose.yml  env2bashrc.sh  install.sh  uninstall.sh
tests/: file_creator.py  file_destructor.py  test_data_reduction.py  test_mongo.py
