[tool.poetry]
name = "datakeeper"
version = "0.1.0"
description = ""
authors = ["Benedith Mulongo <benedith@sunet.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
nox = "^2025.2.9"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
