[tool.poetry]
name = "datakeeper"
version = "0.1.0"
description = ""
authors = ["Benedith Mulongo <benedith@sunet.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.14"
pyyaml = "^6.0.2"
apscheduler = "^3.11.0"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
nox = "^2025.2.9"
black = "^25.1.0"
mypy = "^1.15.0"
pyinstaller = "^6.12.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
nuitka = "^2.6.8"
appimage-builder = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
